--- a/src/app.css
+++ b/src/app.css
@@ -25,4 +25,35 @@
 	.on {
 		@apply opacity-100 text-shadow-xs text-shadow-zinc-50;
 	}
+
+	.language-selector.off {
+		@apply opacity-25;
+	}
+
+	.en.index-104::after {
+		display: block;
+		position: absolute;
+		right: 10%;
+		content: "'";
+	}
+
+	.dot-0 {
+		left: 0;
+		top: 0;
+	}
+
+	.dot-1 {
+		right: 0;
+		top: 0;
+	}
+
+	.dot-2 {
+		right: 0;
+		bottom: 0;
+	}
+
+	.dot-3 {
+		left: 0;
+		bottom: 0;
+	}
 }
